AMDP-263 Fix columns alignments and templates structure

--- a/web/themes/custom/emoney_apigee_kickstart/sass/components/_breadcrumbs.scss
+++ b/web/themes/custom/emoney_apigee_kickstart/sass/components/_breadcrumbs.scss
@@ -2,37 +2,34 @@
 @import './../vendors/fontawesome/solid.scss';
 
 .page__breadcrumbs {
-    background: transparent;
+  background-color: transparent;
+  padding: 20px 0 30px 0;
 
-    .breadcrumb {
-        background: transparent;
+  .breadcrumb {
+    background-color: transparent;
 
-        .breadcrumb-item {
-            padding-top: 24.48px;
+    .breadcrumb-item {
+      padding: 0;
 
-            a {
-                font-size: 16px;
-                line-height: 24px;
-                color: #00AAE7;
-    
-                &:after {
-                    color: #00aae7;
-                    content: fa-content($fa-var-chevron-right);
-                    display: inline-block;
-                    font-size: 14px;
-                    font-family: 'Font Awesome 5 Free';
-                    margin: 0 10px 0 10px;
-                  }
-            }
+      a {
+        font-size: 16px;
+        line-height: 24px;
+        color: $blue;
+
+        &:after {
+          color: $blue;
+          content: fa-content($fa-var-chevron-right);
+          display: inline-block;
+          font-size: 14px;
+          font-family: 'Font Awesome 5 Free';
+          margin: 0 10px 0 10px;
         }
+      }
 
-        .container {
-            padding-top: 4px;
-            padding-left: 0px;
-        }
-
-        .page__title {
-            font-size: 16px;
-        }
+      h1 {
+        font-size: 16px;
+        line-height: 24px;
+      }
     }
+  }
 }
