--- a/web/themes/custom/emoney_apigee_kickstart/sass/pages/_collection_overview.scss
+++ b/web/themes/custom/emoney_apigee_kickstart/sass/pages/_collection_overview.scss
@@ -20,10 +20,13 @@ $supporting-info: 9;
         font-size: 32px;
         font-weight: $bold;
         line-height: 37px;
+        margin: 0;
       }
 
       img {
+        height: 59px;
         margin: 0 10px 0 0;
+        width: auto;
       }
     }
 
